format md file; add react ref, context note

--- a/JS/奇奇怪怪的代码题库.md
+++ b/JS/奇奇怪怪的代码题库.md
@@ -1,5 +1,5 @@
-### 奇奇怪怪的代码题库
-#### 关于箭头函数this
+## 奇奇怪怪的代码题库
+### 关于箭头函数this
 ```
 var p = {
     name: 'tom',
@@ -60,7 +60,7 @@ p1输出空，p2输出tom。
 
 对比p1和p2，p1定义箭头函数的this时，该箭头函数所处的对象为p1，而p1是全局变量，所以箭头函数的this指向window；p2定义箭头函数时，该箭头函数所处的对象为function，所以而function的this指向p2，所以该箭头函数得this指向p2。
 
-#### 关于typeof null
+### 关于typeof null
 都知道typeof null返回'object'，但是很少人知道为什么。
 
 原因：
@@ -68,7 +68,7 @@ p1输出空，p2输出tom。
 
 参考：[typeof](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/typeof)
 
-#### 对比null和undefined
+### 对比null和undefined
 ```
 typeof null        // object (因为一些以前的原因而不是'null')
 typeof undefined   // "undefined"
@@ -83,7 +83,7 @@ isNaN(1 + undefined) // true
 
 ***
 
-#### 立即执行函数
+### 立即执行函数
 ```
 var name = 'World!';
 (function () {
