--- a/计算机网络与操作系统/操作系统进程线程面试题总结.md
+++ b/计算机网络与操作系统/操作系统进程线程面试题总结.md
@@ -1,4 +1,4 @@
-### 操作系统进程线程面试题总结
+## 操作系统进程线程面试题总结
 1. 以下多线程对int型变量x的操作，哪几个需要进行同步： 　　　　
 A. x=y;      B. x++;    C. ++x;    D. x=1;
 答案是ＡＢＣ，y的写入与x读y要同步，x++和++x都要知道x之前的值，所以也要同步。
