add let and const note

--- a/JS/奇奇怪怪的代码题库.md
+++ b/JS/奇奇怪怪的代码题库.md
@@ -123,3 +123,27 @@ Goodbye Jack
 4. 这种模式也可以让你将独立的功能封装在自包含模块中。
 5. 可以将这些代码封装进一个立即执行函数中，并且确保页面没有它的情况下也能正常工作。
 6. 可以添加更多的加强模块，移除它们，单独测试它们，允许用户去禁用它们等等。
+
+---
+### 如何以对象的某一属性值进行排序？
+```
+var objs = {
+    f: {
+        id: 2,
+        name: '2'
+    }, 
+    a: {
+        id: 3,
+        name: '3'
+    }, 
+    c: {
+        id: 1,
+        name: '1'
+    }
+};
+Object.keys(objs).sort(function(a, b) {
+    return objs[b].id - objs[a].id;
+});
+```
+
+---
